Changes done in hyperlink

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
         <div class="more-details">
           <h6 class="timeline-title">For more Details</h6>
           <div class="click-here">
+            <a href="http://www.turinghacx.club/">
             <button>Click Here</button>
+          </a>
           </div>
         </div>
       </div>
