Added basic website with hyperlinking

--- a/index.html
+++ b/index.html
@@ -20,30 +20,26 @@
         <div class="about-us-wrapper">
           <h6 class="about-us-title">About Us</h6>
           <p class="about-content">
-            Facilisis hac risus blanditiis maiores irure accumsan nam fugit!
-            Saepe, quam! Parturient? Mollis illum voluptatum velit sociis iusto
-            neque fugiat! Inceptos ut. Nesciunt nisi libero nostrum distinctio
-            interdum omnis facilis. Adipisci eros purus dui quas facere, facere
-            veritatis, leo officiis hymenaeos class, quod eiusmod? Eget dicta?
-            Varius nihil commodi? Maecenas, saepe ullamco consequatur elementum,
-            proin nulla eius elementum.
+            School of Technology intends to focus on technological education, research and service that anticipates, and meets, the need of tomorrow's world. It is expected that engineering graduates from School of Technology will care about issues that technology can make difference whether these issues are health, security, economic well-being or sustainability of world and values.
           </p>
         </div>
         <div class="timeline-wrapper">
           <h6 class="timeline-title">TimeLine</h6>
             <div class="schedule">
-          <span class="time">9:00 AM - 10:00 AM - Inaugral Ceremony</span>
-          <span class="time">10:00 AM - 1:00 PM - Ideation Round</span>
-          <span class="time">1:00 PM - 3:00 PM - Idea Presentation</span>
-          <span class="time">3:30 PM - 3:30 PM - Results of Round 1</span>
+              <span class="time">2 October 2023 - 30 November 2023 - Registrations</span>
+              <span class="time">10 December 2023 - List of shortlisted candidates</span>
+              <span class="time">21 - 23 December 2023 - Hacking Dates</span>
+              <!-- <span class="time">10:00 AM - 1:00 PM - Ideation Round</span>
+              <span class="time">1:00 PM - 3:00 PM - Idea Presentation</span>
+              <span class="time">3:30 PM - 3:30 PM - Results of Round 1</span> -->
         </div>
         </div>
 
         <div class="more-details">
           <h6 class="timeline-title">For more Details</h6>
           <div class="click-here">
-            <a href="http://www.turinghacx.club/">
-            <button>Click Here</button>
+            <a href="https://turinghacx.club/">
+              <button>Click Here</button>
           </a>
           </div>
         </div>
